Removed redudant work commands